Add user action for repository_integrity indicator